# RayTracer

./: .gitattributes  .gitignore  README.md  cs6620_subl_workspace.sublime-workspace
BlenderScenes/: BLENDSWAP_LICENSE.txt  Still Scene.blend  Still Scene.blend1  data.txt  io_export_multiple_objs.py  io_import_multiple_objs.py
BlenderScenes/ItalianStillLife/: BLENDSWAP_LICENSE.txt
BlenderScenes/Still Life/: export_objs.py  export_transforms.py
BlenderScenes/StillLifeModels/: Light2.mtl  Pot.mtl
BlenderScenes/Strawberry/: BLENDSWAP_LICENSE.txt
BlenderScenes/backdrops/: BLENDSWAP_LICENSE.txt  Norm_Mug.mtl  Studio Backdrops.mtl  saucer.mtl  spoon.mtl  testScene.blend
Models/: 1X1X1.mtl  1X1X1.mtl.mtl  1X2X1.mtl  Luxo.mtl  Luxo.stl  kleinBottle.mtl
Models/Grass/: BSwap_GrassPatches_01.mtl  Foliage_Grass01_DiffuseMask.tga
Models/R8/: Map__37_Flat_Mirror.tga  r8.mtl  r8_gt_obj.mtl
Models/SL/: Cube.mtl  Cylinder.002.mtl  Cylinder.003.mtl  Plane.001.mtl  Plane.002.mtl  Plane.mtl  Sphere.mtl
Models/StillLifeModels/: BackWall.mtl  Light1.mtl  Table.mtl
Models/competition2low/: TeapotBody.001_cell_TeapotBody.001_cell.100.mtl  test2.mtl
Models/luxoball/: luxoball.blend  luxoball.blend1  luxoball2.blend  luxoball2.blend1  luxoball_0.mtl  luxoball_1.mtl  luxoball_2.mtl
Scenes/: BoxScene.xml  GICornell.xml  GITeapot.xml  PhotonCornell.xml  ReflectRefractTest.xml  coke.xml  competition.xml  competition2.xml  cornellWObj.xml  cornellWObj1.xml  italianStillLife.xml  klein.xml  luxo.xml  photon.xml  prj10.xml  prj2.xml  r8.xml  ray_intersects_plane.xml  ray_intersects_triangle.xml  scene_7.xml  stillLife.xml  suzanne.xml  texture_test.xml  texture_test_2.xml
prj01/Sources/: IntersectRay.cpp  catch_main.cpp  render.cpp  render.h  viewport.cpp  xmlload.h
prj02/Sources/: catch_main.cpp  main.cpp  materials.h  objects.cpp  viewport.cpp
prj03/Sources/: materials.h
prj04/: CMakeLists.txt
prj04/Sources/: main.cpp  objects.cpp  scene.h  xmlload.cpp
prj05/: CMakeLists.txt
prj05/Sources/: lights.cpp  lights.h  main.cpp  materials.cpp  objects.h  render.cpp  render.h
prj06/Sources/: catch_main.cpp  main.cpp  objects.h  scene.cpp  xmlload.cpp
prj07/: CMakeLists.txt
prj07/Sources/: lights.cpp  main.cpp  materials.cpp  render.cpp  scene.h  texture.cpp  texture.h  viewport.cpp
prj08/: CMakeLists.txt
prj08/Sources/: CMakeLists.txt  lights.h  materials.cpp  objects.cpp  objects.h  render.cpp  render.h  scene.h  scene2.h  viewport.cpp  xmlload.cpp
prj08/Sources/cyCodeBase/: CMakeLists.txt
prj09/: CMakeLists.txt
prj09/Sources/: CMakeLists.txt  lights.cpp  main.cpp  materials.cpp  materials.h  objects.cpp  options.h  render.cpp  render.h  scene.cpp  scene.h  xmlload.cpp
prj1/: CMakeLists.txt
prj1/Sources/: CMakeLists.txt  main.cpp  scene.h  xmlload.cpp
prj1/Sources/cyCodeBase/: CMakeLists.txt
prj10/: CMakeLists.txt
prj10/Sources/: CMakeLists.txt  lights.cpp  lights.h  main.cpp  materials.cpp  materials.h  objects.cpp  options.h  render.cpp  render.h  scene.h  viewport.cpp  xmlload.cpp
prj11/: CMakeLists.txt
prj11/CMakeModules/: FindGLUT.cmake
prj11/Sources/: CMakeLists.txt  lights.cpp  materials.cpp  options.h  render.cpp  render.h  viewport.cpp
prj12/: CMakeLists.txt
prj12/Sources/: CMakeLists.txt  lights.cpp  lights.h  materials.cpp  materials.h  options.h  render.cpp  render.h  scene.h  viewport.cpp  xmlload.cpp
prj13/: CMakeLists.txt
prj13/Sources/: CMakeLists.txt  PhotonMapViz.cpp  lights.cpp  lights.h  main.cpp  materials.cpp  materials.h  morton.h  objects.cpp  options.h  render.cpp  render.h  scene.h  texture.cpp  texture.h  trace.h  viewport.cpp  xmlload.cpp
prj2/Sources/: render.cpp  render.h
prj3/Sources/: lights.cpp  objects.cpp  objects.h  scene.h  xmlload.cpp
prj4/: CMakeLists.txt
prj4/Sources/: CMakeLists.txt  materials.cpp  materials.h  objects.cpp  render.cpp  render.h
prj6/: CMakeLists.txt
prj6/Sources/: CMakeLists.txt  objects.cpp  render.cpp  scene.h
prj7/: CMakeLists.txt
(+22 files in other folders)
